Remove obsolete commons-io dependency